fixed broken html, cart not showing when scrolled down on the page

--- a/style/style.css
+++ b/style/style.css
@@ -178,8 +178,8 @@ html {
   background-color: #b89a72;
 }
 /* .background {
-  padding: 0.5em; 
-} */
+    position: relative;
+  } */
 
 li {
   list-style-type: none;
@@ -216,6 +216,7 @@ li {
   position: sticky;
   top: 0;
   transform: scale(-1);
+  z-index: 10;
 }
 .menu-nav {
   background-color: #b89a72;
@@ -305,6 +306,7 @@ h3 {
 }
 input {
   padding: 0.2em 0.3em;
+  width: 10ch;
 }
 .order-now-btn,
 .order-more-btn,
